# portfolio

./: .gitignore  Cargo.toml  README.md
web/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js  tailwind.config.ts  tailwind.pcss  vercel.json
web/src/: App.svelte  custom.css  custom.pcss  home.rs  lib.rs  main.rs  main.ts  tailwind.css
web/src/components/: about.rs  contact.rs  mod.rs  project.rs  stack.rs
web/src/helper/: banner.rs  collection.rs  keypoint.rs  mod.rs  mute_audio.rs  socials.rs
web/src/lib/: Contact.svelte  Footer.svelte  Navbar.svelte  RedIsGaming.svelte  Technology.svelte  about.ts  contact.ts  footer.ts  icons.ts  projects.ts  redisgaming.ts  socials.ts  technologies.ts  technology.ts  theme.ts  types.ts
web/src/lib/layout/: About.svelte  Contact.svelte  Footer.svelte  Navbar.svelte  Project.svelte  RedIsGaming.svelte  Technology.svelte
web/src/static/: footer.rs  header.rs  mod.rs  unfound.rs
